# assistant_to_the_regional_manager

./: README.md  main.py  pyproject.toml
src/: auth.py  cli.py  commands.py  config.py  main.py
