[project]
name = "attrm"
version = "0.1.0"
description = "Assistant To The Regional Manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "cutie>=0.3.2",
    "langchain[openai]>=1.0.3",
    "platformdirs>=4.5.0",
]

[project.scripts]
attrm = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["."]
only-include = ["src"]
